<resources>
    <string name="app_name">Shredit</string>
    <string name="home_customize_gym">Customize Gym</string>
    <string name="home_generate_workout_text">Generate a New Workout</string>
    <string name="home_search_gyms">Search Gyms</string>
    <string name="home_manage_workouts">Manage Workouts</string>
    <string name="home_load_workout">Load Workout</string>
    <string name="home_saved_workouts">Saved Workouts</string>
    <string name="home_login">Login</string>
    <string name="title_activity_admin_add_new_exercise">AdminAddNewExerciseActivity</string>
    <string name="dialog_save_workout_name_hint">Enter workout name</string>
    <string name="workout_home">Home</string>
    <string name="workout_save">Save Workout</string>

</resources>

